--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -21,10 +21,35 @@ body, html {
   .hero-text {
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
   }
 
-  
+  .hero-text > h1 {
+      font-size: 3.5rem;
+  }
+
+  .home-cards {
+      display: flex;
+      justify-content: space-evenly;
+      width: 100%;
+  }
+
+  .home-cards .card {
+      display: inline-block;
+      margin: 20px;
+      width: 20em;
+  }
+
+  .home-cards .card .card-body {
+      margin-top: 12px;
+  }
+
+@media only screen and (max-width: 700px) {
+   .home-cards {
+       flex-direction: column;
+       align-items: center;
+   } 
+}
