--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -3,53 +3,74 @@ body, html {
     height: 100%;
   }
   
-  /* The hero image */
-  .hero-image {
-  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./../../Austin.jpg");
-    /* Set a specific height */
-    height: 80vh;
-  
-    /* Position and center the image to scale nicely on all screens */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  
-  /* Place text in the middle of the image */
-  .hero-text {
-    text-align: center;
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
 
-  .hero-text > h1 {
-      font-size: 3.5rem;
-  }
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./../../Austin.jpg");
+  height: 80vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
 
-  .home-cards {
-      display: flex;
-      justify-content: space-evenly;
-      width: 100%;
-  }
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
 
-  .home-cards .card {
-      display: inline-block;
-      margin: 20px;
-      width: 20em;
-  }
+.hero-text > h1 {
+    font-size: 3.5rem;
+}
 
-  .home-cards .card .card-body {
-      margin-top: 12px;
-  }
+.home-cards {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.home-cards .card {
+    display: inline-block;
+    margin: 20px;
+    width: 20em;
+}
+
+.home-cards .card .card-body {
+    margin-top: 12px;
+}
+
+.icons {
+  display: flex;
+  align-self: center;
+  margin: 10px auto; 
+  width: 25%;
+  font-size: 45px;
+  justify-content: space-evenly;
+}
+
+.icons a {
+  color: white !important;
+}
+
+
 
 @media only screen and (max-width: 700px) {
    .home-cards {
        flex-direction: column;
        align-items: center;
    } 
+   .home-cards .card {
+   }
+
+   .hero-image {
+     height: 60vh;
+   }
+
+   .icons {
+     width: 50%;
+   }
 }
