--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -28,19 +28,30 @@ body, html {
 }
 
 .home-cards {
-    display: flex;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
     width: 100%;
 }
 
 .home-cards .card {
-    display: inline-block;
-    margin: 20px;
-    width: 20em;
+    box-shadow: 1px 1px 1px gray;
+    margin: 10px;
+    transition: 1s;
 }
 
 .home-cards .card .card-body {
-    margin-top: 12px;
+  font-size: 50px;
+  color: black;
+}
+
+a.card-body {
+  text-decoration: none;
+  text-align: center;
+}
+
+.home-cards .card:hover {
+    background-color: #d1e3ff;
 }
 
 .icons {
@@ -62,6 +73,7 @@ body, html {
    .home-cards {
        flex-direction: column;
        align-items: center;
+       grid-template-columns: 1fr;
    } 
    .home-cards .card {
    }
